# Huffman_Coding

./: CMakeLists.txt  README.md
include/: binary_tree.h  bit_stream.h  build_string.h  char_map.h  comparable.h  dynamic_heap.h
link/: binary_tree.c  bit_stream.c  build_string.c  char_map.c  comparable.c  dynamic_heap.c
src/: main.c
temp/output/: output.txt
